--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@quasar/extras": "^1.0.0",
     "core-js": "^3.6.5",
     "firebase": "^8.2.7",
+    "moment": "^2.29.1",
     "quasar": "^1.0.0",
     "vue": "^2.6.11",
     "vue-html2pdf": "^1.8.0",
