--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -13,6 +13,6 @@ jobs:
               with:
                   repoToken: '${{ secrets.GITHUB_TOKEN }}'
                   firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_BB_INVOICE_MANAGER }}'
-                  projectId: bb-invoice-manager
+                  projectId: invoice-manager-6e5f5
               env:
                   FIREBASE_CLI_PREVIEWS: hostingchannels
