update cypress integration

--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
         "@vue/cli-plugin-router": "~4.5.12",
         "@vue/cli-plugin-vuex": "~4.5.12",
         "@vue/cli-service": "~4.5.12",
+        "cypress": "^7.2.0",
+        "cypress-firebase": "^1.8.0",
+        "firebase-admin": "^9.6.0",
         "node-sass": "^5.0.0",
         "sass-loader": "^10.1.1",
         "vue-cli-plugin-quasar": "~3.0.1",
